--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+  <head>
+    Macesarr blog
+  </head>
+  <body>
+    <h1>Hello world</h1>
+    <p>I have to publish all my work here.</p>
+  </body>
 </html>
