--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    Macesarr blog
-  </head>
-  <body>
-    <h1>Hello world</h1>
-    <p>I have to publish all my work here.</p>
-  </body>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<title>Bloody Business</title>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+<body>
+<div id="wrap">
+  <div id="tophead"></div>
+  <div id="header">
+    <div id="logo">
+      <h1 class="logotext">Bl<span>oo</span>dy Business</h1>
+    </div>
+    <div id="navigation">
+      <ul>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">About</a></li>
+        <li><a class="current" href="#">Home</a></li>
+      </ul>
+    </div>
+    <div id="infobox">
+      <h1>This Business Blog is just another Business Blog </h1>
+      <span>This template uses minimum graphics, clean layout and dark red color. Ideal for Business or Personal Websites.</span> </div>
+  </div>
+  <div id="sidenotes">
+    <div class="sidenav">
+      <ul>
+        <li><a class="active" href="#">Site News</a></li>
+        <li><a href="#">Music and Movies</a></li>
+        <li><a href="#">Technology</a></li>
+        <li><a href="#">Business</a></li>
+        <li><a href="#">Books</a></li>
+      </ul>
+    </div>
+  </div>
+  <div id="contents">
+    <h2>Welcome</h2>
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Quisque  blandit, sem id tempus bibendum, mi leo dignissim erat, aliquet  vestibulum nisl arcu sed velit. Morbi vehicula tortor vel orci.  Suspendisse tristique ligula id dui. Nulla sed velit. Nulla tristique  nibh vitae felis. Aenean pellentesque molestie sem. Ut imperdiet.  Suspendisse potenti. </p>
+    <ul>
+      <li>Aliquam Pede</li>
+      <li>Fusce Ante Nibh</li>
+      <li>Porttitor a</li>
+      <li>Eleifend eu</li>
+    </ul>
+    <p>Class aptent taciti sociosqu ad litora torquent  per conubia nostra, per inceptos hymenaeos. <a href="#">Aliquam pede</a>. Fusce ante  nibh, porttitor a, eleifend eu, consectetuer ut, eros. Praesent at  ligula id mauris posuere congue. Vivamus urna quam, posuere vel,  dapibus et, luctus nec, arcu. Lorem ipsum dolor sit amet, consectetuer  adipiscing elit. Donec leo dolor, eleifend eget, accumsan vitae, dictum  sed, sem. </p>
+    <div class="blogbottom"> <a href="#">Readmore</a><a href="#">6 Comments</a>
+      <hr />
+    </div>
+    <h3>The Heading 3 - Drop it! </h3>
+    <p><span class="drop">M</span>auris dignissim ultricies mi. Suspendisse eget massa. Sed venenatis  neque. Vivamus eu augue a odio convallis fringilla. Maecenas quam  felis, convallis at, mollis ut, scelerisque in, augue. Praesent  suscipit turpis id ante. Phasellus eget nibh quis risus rhoncus  placerat. Vestibulum felis augue, sodales vel, dictum imperdiet, mattis  sit amet, mauris. Donec quis ligula. Aenean vitae nisl. Phasellus  feugiat gravida lacus. Curabitur a nunc sit amet lectus tempor  elementum. Vestibulum et nulla. Nulla nulla pede, condimentum ac,  rutrum eu, convallis eget, turpis. Nulla fringilla urna eget magna. </p>
+    <p>Proin quam arcu, tincidunt sed, sodales non, commodo blandit, est.  In pellentesque tellus. Donec bibendum. Integer sollicitudin, massa a  feugiat hendrerit, ligula diam vestibulum nisi, id malesuada ipsum nibh  nec purus. Praesent non quam. Nunc non nisi. Suspendisse potenti. Proin  sed arcu. Vivamus tempor consectetuer nulla.</p>
+    <blockquote>
+      <p>Morbi sed tellus. Suspendisse interdum. Morbi convallis. Quisque  blandit ultricies leo. Suspendisse id quam ut lacus cursus tristique.  Nullam urna purus, rutrum vel, rutrum eu, venenatis id, tortor. Etiam  ut arcu. Vivamus tempor, mauris id blandit scelerisque, augue dui  pretium tortor, non malesuada metus mi nec quam. Mauris nec eros.  Vivamus massa sapien, malesuada vitae, lacinia non, auctor ut, lorem.  Maecenas convallis. Sed id magna.</p>
+    </blockquote>
+    <p>Morbi sed tellus. Suspendisse interdum. Morbi convallis. Quisque  blandit ultricies leo. Suspendisse id quam ut lacus cursus tristique.  Nullam urna purus, rutrum vel, rutrum eu, venenatis id, tortor. Etiam  ut arcu. Vivamus tempor, mauris id blandit scelerisque, augue dui  pretium tortor, non malesuada metus mi nec quam. Mauris nec eros.  Vivamus massa sapien, malesuada vitae, lacinia non, auctor ut, lorem.  Maecenas convallis. Sed id magna. </p>
+  </div>
+  <div id="footer">
+    <div class="rsslinks"><a href="#">Feeds Available</a></div>
+    <div class="footerinner">&copy; Information Goes Here | Valid <a href="http://validator.w3.org/check?uri=referer">XHTML 1.1</a> and <a href="#">CSS 2.0</a></div>
+  </div>
+</div>
+<div id="bottompage">
+  <div id="inner"><span><a href="#">Back to Top</a></span>
+    <!-- -->
+    <a href="http://www.ramblingsoul.com" title="rambles and rants, Design portfolio, Brunei Web Designer">Design : RamblingSoul</a>
+    <!--  -->
+  </div>
+</div>
+</body>
 </html>
